--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,7 @@ on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - master
+  pull_request: ~
   workflow_dispatch: ~
 
 jobs:
@@ -16,6 +14,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: pull-request
+        uses: repo-sync/pull-request@v2
+        with:
+          source_branch: ""                                 # If blank, default: triggered branch
+          destination_branch: "master"                      # If blank, default: master
+          github_token: ${{ secrets.CI_TOKEN }}
       - name: Pull images
         run: docker compose pull --ignore-pull-failures || true
       - name: Start services
